# replit-test1

./: .gitignore  .replit  README.md  main.py  pyproject.toml
static/: script.js  styles.css
templates/: index.html
