[tool.poetry]
name = "repl-nix-simple-interface-page"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.34"
jinja2 = "^3.1.4"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
